--- a/4/index.html
+++ b/4/index.html
@@ -229,6 +229,6 @@
       <button type="button" class="error__button">Попробовать снова</button>
     </div>
   </template>
-<script scr="/js/main.js"></script>
+<script scr="js/main.js"></script>
 </body>
 </html>
